fix comment modal text wrapping and scrolling, fix swiping to close modal

--- a/public/output.css
+++ b/public/output.css
@@ -1386,6 +1386,10 @@ select {
   max-width: 430px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1567,6 +1571,19 @@ select {
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.text-wrap {
+  text-wrap: wrap;
+}
+
+.break-normal {
+  overflow-wrap: normal;
+  word-break: normal;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-12\.75 {
